--- a/NAV_1/style.css
+++ b/NAV_1/style.css
@@ -49,6 +49,10 @@ h1 {
   color: #0088a9;
 }
 
+.menu {
+  display: none;
+}
+
 button {
   padding: 9px 25px;
   background-color: rgba(0, 136, 169, 1);
@@ -60,6 +64,17 @@ button {
 
 button:hover {
   background-color: rgba(0, 136, 169, 0.8);
+}
+
+@media screen and (max-width: 800px) {
+  .nav_links,
+  .cta {
+    display: none;
+  }
+
+  .menu {
+    display: inherit;
+  }
 }
 
 /* Mobile Nav */
@@ -89,4 +104,30 @@ button:hover {
   font-size: 36px;
   display: block;
   transition: all 0.3s ease 0s;
+}
+
+.overlay a:hover,
+.overlay a:focus {
+  color: #0088a9;
+}
+
+.overlay .close {
+  position: absolute;
+  top: 20px;
+  right: 45px;
+  font-size: 60px;
+}
+
+/* Media Queries */
+
+@media screen and (max-height: 450px) {
+  .overlay a {
+    font-size: 20px;
+  }
+
+  .overlay .close {
+    font-size: 40px;
+    top: 15px;
+    right: 35px;
+  }
 }
